Fixed z-index on header subtittle

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -46,7 +46,7 @@
     line-height: 25px;
     font-size: 18px;
     font-weight: normal;
-    z-index: 1;
+    z-index: 2;
   }
   
   .header__link {
